# samudra-os

./: .gitignore  Cargo.toml  LICENSE.txt  Makefile  README.md  build.sh  dev.sh
.cargo/: config.toml
asm/: boot.S  trap.S  variables.S
include/: common.h  syscon.h  types.h
lds/: virt.lds
scripts/: build.sh  dev.sh  qemu.sh  qemu_run.sh  spike.sh
scripts/utils/: debug.sh
src/: Cargo.toml  Makefile  asm.rs  concurrency.rs  lib.rs  main.rs  math.rs  memory.rs  riscv.rs  syscon.rs  system_control.rs  uart.rs  wasm.rs
src/.cargo/: config.toml
src/asm/: boot.S  trap.S
src/c/: str.c  test.c
src/include/: str.h  sys.h  types.h  uart.h
src/lds/: virt.lds
src/mem/: page.rs
src/src/: lib.rs  mem.rs  syscon.rs  uart.rs
wasm/example-hello-world/: Cargo.toml
wasm/example-hello-world/.cargo/: config.toml
wasm/example-hello-world/src/: lib.rs
