[package]
name = "samudra-kernel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
test = false
bench = false

[profile.dev]
lto = "off"
opt-level = 0

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3

[dependencies]
libm = { version = "0.2.7", default-features = false }
wasmi = { version = "0.30.0", default-features = false }
