[package]
name = "samudra-kernel"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "samudra-kernel"
test = false
bench = false

[profile.dev]
overflow-checks = true
debug = "full"
lto = "off"
opt-level = 0

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3

[dependencies]
fdt = { version = "0.1.5", features = ["pretty-printing"] }
