[package]
name = "samudra-kernel"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "samudra-kernel"
test = false
bench = false

[profile.dev]
overflow-checks = true
debug = "full"
lto = "off"
opt-level = 0

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3

[dependencies]
allocator-api2 = { version = "0.2.21", default-features = false, features = ["alloc", "fresh-rust"] }
fdt = { version = "0.1.5", features = ["pretty-printing"] }
lock_api = { version = "0.4.12", features = ["arc_lock"] }
riscv = "0.13.0"
spin = "0.10.0"
talc = { version = "4.4.2", default-features = false, features = ["allocator-api2", "lock_api"] }
